// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows usage of dot delimited path to access nested attribute 1`] = `

<span class="ais-Snippet">
  nested
  <mark class="ais-Snippet-highlighted">
    val
  </mark>
</span>

`;

exports[`renders proper HTML 1`] = `

<span class="ais-Snippet">
  con
  <mark class="ais-Snippet-highlighted">
    ten
  </mark>
  t
</span>

`;

exports[`renders proper HTML with highlightTagName 1`] = `

<span class="ais-Snippet">
  con
  <marquee class="ais-Snippet-highlighted">
    ten
  </marquee>
  t
</span>

`;

exports[`should render an empty string in production if attribute is not snippeted 1`] = `

<span class="ais-Snippet">
</span>

`;
